Controlador de Settings

--- a/Assets/Resources/UserConfigurationFiles/UserConfiguration.json
+++ b/Assets/Resources/UserConfigurationFiles/UserConfiguration.json
@@ -1,5 +1,1 @@
-{
-	"Language": "Español",
-	"MusicVolume": "100",
-	"FSXVolume": "100"
-}
+{"Language":"Español","MusicVolume":"100","FSXVolume":"100"}
